# verbatim-rag

./: .dockerignore  .env.example  .gitignore  404.html  ACL.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  environment.yaml  environment.yml  index.html  pyproject.toml  sitemap.xml
api/: app.py  config.py  dependencies.py
api/services/: __init__.py  rag_service.py
api/verbatim-core/: index.html
api/verbatim-rag/: index.html
archehr/: README.md  predict.py  preprocess.py
configs/: config.py  extractor_full.yaml  generator.yaml  hf_config.py  indexer.yaml
docker/: constraints.txt  overrides.txt
exploration/: RAG-Bench-exploration.ipynb  evaluation_on_ARCH.ipynb  exploration.ipynb  load_model_to_hg.ipynb  train_qa_model.ipynb
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json
generation/: generate_notes.ipynb  generate_questions.ipynb
notebooks/: test_context_enriched_processor.ipynb  test_document_processor.ipynb  test_verbatim_rag_integration.ipynb
scripts/: chunk_docs.py  index_acl.py  preprocess_acl.py  process_anthology.py  process_papers_schema.py  query_index.py
search/: search_index.json
tests/: test_bedrock_llm_client.py  test_docling_loader.py  test_document.py  test_extractors.py  test_loader.py  test_text_splitter.py
verbatim_blog/: index.html
verbatim_core/: extractors.py  llm_client.py  response_builder.py
verbatim_rag/: __init__.py  chunking.py  cli.py  config.py  core.py  docling_loader.py  document.py  embedding_providers.py  extractors.py  index.py  llm_client.py  loader.py  models.py  providers.py  response_builder.py  schema.py  streaming.py  template_manager.py  text_splitter.py  vector_stores.py  verbatim_doc.py
(+255 files in other folders)
