[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbatim_rag"            # your package name
version = "0.1.0"
description = "Verbatim RAG: clinical note & QA generation"
readme = "README.md"
authors = [
    { name="Paul Schmitt", email="paul.schmitt@tuwien.ac.at" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# locate packages under src/ and at configs/
where = ["src", "."]
include = ["verbatim_rag*", "configs*"]
exclude = ["scripts*", "data*"]
