[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbatim_rag"            # your package name
version = "0.1.0"
description = "Verbatim RAG: clinical note & QA generation"
readme = "README.md"
authors = [
    { name="Paul Schmitt", email="paul.schmitt@tuwien.ac.at" }
]
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
# locate packages under src/ and at configs/
where = ["src", "."]
include = ["verbatim_rag*", "configs*"]
exclude = ["scripts*", "data*"]

[project.scripts]
generate-notes       = "scripts.generation.generate_notes:main"
generate-questions   = "scripts.generation.generate_questions:main"
train-classifier     = "scripts.models.train_classifier:main"
baseline-eval        = "scripts.models.train_and_evaluate_baseline:main"
evaluate-classifier  = "scripts.models.evaluate_classifier:main"
upload-model         = "scripts.models.upload_model_to_hg:main"
preprocess-acl       = "scripts.preprocessing.preprocess_acl:main"
